force-app/main/default/objects/Grocery_customer__c/Grocery_customer__c.object-meta.xml
<CustomObject>
    <label>Grocery_customer</label>
    <nameField>
        <label>Grocery_customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grocery customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>