force-app/main/default/objects/Grocery_customer__c/fields/Bank_card__c.field-meta.xml
<CustomField>
    <fullName>Bank_card__c</fullName>
    <label>Bank card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>