force-app/main/default/objects/Grocery_customer__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>