force-app/main/default/objects/Grocery_customer__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>